
namespace GameStageRank
{
    public enum Rank
    {
        None,
        All,
        D,
        C,
        B,
        A,
        S,
    }
}

